fixed home page stretch to screen size

--- a/styles/homePage.css
+++ b/styles/homePage.css
@@ -4,10 +4,16 @@ html {
 
 #homePage {
   height: 100%;
+  width: 100%;
+  padding: 0;
   background: none;
   background-image: none;
 /*  text-shadow: 0 1px 0 #000;*/
   overflow: visible;
+}
+
+#homePage section[data-type="sidebar"] {
+  width: 100%;
 }
 
 /* IE Hack */
